--- a/app/assets/stylesheets/patients.scss
+++ b/app/assets/stylesheets/patients.scss
@@ -58,7 +58,8 @@
 }
 .patient__section--name {
     width: auto;
-    position: relative;
+    height: 16px;
+    position: absolute;
     padding: 0 16px; 
     background-color: #f5f5f5;
     top: -14px;
