Hotfix for patients without specialties

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -5,7 +5,7 @@
     <% end %>
   <% else %>
     <p>
-      No results found
+      No results found, please update your profile
     </p>
   <% end %>
 </div>
