add date select and time select pages add appointment confirm details page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,6 +47,15 @@ body {
 #availability {
   margin-top:60px;
 }
+
 .container{
   margin:24px;
+}
+
+#time_availability {
+  height: 232px;
+
+  a {
+    color: black;
+  }
 }
