--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,6 +1,6 @@
 <div class="search-results card-deck justify-content-center align-items-center flex-wrap">
-  <% if @search != [] %>
-    <% @search.each do |result| %>
+  <% if @results != [] %>
+    <% @results.each do |result| %>
       <%= render './shared/userthumb', user: result %>
     <% end %>
   <% else %>
