--- a/app/views/appointments/time_select.html.erb
+++ b/app/views/appointments/time_select.html.erb
@@ -1,53 +1,34 @@
-<div class="container mx-auto">
+<div class="">
 
   <h1 class="text-center mb-4">Please Select a Time</h1>
 
-  <%= form_with model:@appointment, url: new_therapist_appointment_path(@therapist), method: :get, local: true do |f| %>
-    <div class="form-group">
-      <%= f.label :date %>
-      <%= f.date_field :date, value: @date, id: 'date_select' %>
-    </div>
-    <div class="form-group">
-      <%= f.label :start_time %>
-      <%= f.time_select :start_time, minute_step: 15, ampm: true, start_hour: 8, end_hour: 18 %>
-    </div>
+  <%= form_with model:@appointment, url: new_therapist_appointment_path(@therapist), method: :get, local: true, :html => {class: 'form-inline mx-auto'} do |f| %>
+    <%# <div class="d-flex justify-content-center align-items-center"> %>
+      <div class="form-group my-0 ml-auto mr-2">
+        <%= f.label :date, 'Date:', class: "mr-2" %>
+        <%= f.date_field :date, value: @date, id: 'date_select', class: "form-control" %>
+      </div>
+      <div class="form-group my-0 mx-2">
+        <%= f.label :start_time, 'Start Time:', class: "mr-2" %>
+        <%= f.time_select :start_time, { minute_step: 15, ampm: true, start_hour: 8, end_hour: 18 }, { class: "form-control" } %>
+      </div>
 
-    <div class="form-group">
-      <%= f.label 'Duration' %>
-      <%= f.select 'duration', options_for_select([ 15, 30, 45, 60 ], 15) %>
-      <span>minutes</span>
-    </div>
-    <%= f.submit 'Continue', class: "btn btn-primary" %>
+      <div class="form-group my-0 mx-2">
+        <%= f.label 'Duration:', class: "mr-2" %>
+        <%= f.select 'duration', options_for_select([ 15, 30, 45, 60 ], 15), {}, {class: "form-control"} %>
+        <span class="ml-2">minutes</span>
+      </div>
+      <%= f.submit 'Continue', class: "btn btn-primary my-0 mr-auto ml-2" %>
+    <%# </div> %>
   <% end %>
 
-  <h2 class="my-4">Availability</h2>
-  <!--
-  <table class="table table-bordered table-responsive">
-    <% @times2DArray.each do |times1DArray| %>
-      <tr>
-        <% times1DArray.each do |time| %>
-          <td class="p-1" data-time="<%= time %>">
-            <% if @unavailable_times.include?(time) || time < Time.now %>
-              <div class="unavailable">
-            <% else %>
-              <div class="available">
-            <%end%>
-              <%= link_to therapist_time_select_path(@therapist, date: @date, start_time: time.strftime("%H:%M")) do %>
-                <%= time.strftime("%I:%M%p") %>
-              <% end %>
-            </div>
-          </td>
-        <% end %>
-      </tr>
-    <% end %>
-  </table>
-  -->
-  <div id="time_availability" class="d-flex flex-column flex-wrap">
+  <h2 class="my-4 text-center">Availability</h2>
+  <div id="time_availability" class="available-time-grid">
     <% @timesArray.each do |time| %>
       <% if @unavailable_times.include?(time) || time < Time.now %>
-        <div class="unavailable m-1" style="width: 100px; height: 50px;">
+        <div class="unavailable m-1" style="width: 90px; height: 50px;">
       <% else %>
-        <div class="available m-1" style="width: 100px; height: 50px;">
+        <div class="available m-1" style="width: 90px; height: 50px;">
       <%end%>
         <%= link_to therapist_time_select_path(@therapist, date: @date, start_time: time.strftime("%H:%M")) do %>
           <%= time.strftime("%I:%M%p") %>
